--- a/src/shared/components/challenge-detail/Winners/style.scss
+++ b/src/shared/components/challenge-detail/Winners/style.scss
@@ -28,6 +28,7 @@
   margin-bottom: 20px;
 }
 
+button.download,
 .download {
   @include roboto-bold;
 
@@ -40,10 +41,14 @@
     color: #0ab88a;
   }
 
+  &:focus,
   &:disabled {
-    pointer-events: none;
     background-color: transparent;
     color: #137d60;
+  }
+
+  &:disabled {
+    pointer-events: none;
   }
 
   &.MM {
